Pushing local works to remote

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
-body {
+
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body {
+  height: 100%;
+  width: 100%;
+  scroll-behavior: smooth;
+}
+
+.digital-watch {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  color: #fff;
+  font-family: Arial, sans-serif;
+  font-size: 20px;
+  text-align: right;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+}
+
+.digital-watch__date {
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+
+.digital-watch__time {
+  font-size: 28px;
 }
